# aegis

./: .gitignore  AGENTS.md  AGENTS.zh.md  CLAUDE.md  Cargo.toml  RELEASE.md
.github/workflows/: ci.yml  release.yml
crates/aegis-core/: Cargo.toml
crates/aegis-core/src/: authority.rs  builtin.rs  cancel.rs  context.rs  cvar.rs  error.rs  executor.rs  flags.rs  hook.rs  lib.rs  output.rs  parser.rs  plugin.rs  query.rs  registry.rs  script.rs  sink.rs
crates/aegis-core/tests/: crate_contract.rs  output_error_contract.rs  parser_contract.rs  plugin_protocol_contract.rs  public_api_contract.rs  registry_executor_contract.rs  script_runner_contract.rs
crates/aegis-ffi/: Cargo.toml
crates/aegis-ffi/src/: error.rs  handle.rs  lib.rs  register.rs  result.rs  string.rs
crates/aegis-ffi/tests/: abi_version.rs  ffi_boundary.rs  ffi_registration.rs
include/: aegis.h  module.modulemap
scripts/: check-c-header.sh  package-apple-xcframework.sh  package-checksums.sh  package-windows-msvc.ps1  validate-rust.sh
