[workspace]
members = [
    "crates/aegis-core",
    "crates/aegis-ffi",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
missing_docs = "deny"
rust_2018_idioms = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_lifetimes = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
clone_on_copy = "deny"
expect_used = "deny"
large_enum_variant = "warn"
manual_ok_or = "warn"
needless_collect = "warn"
panic = "deny"
redundant_clone = "deny"
unwrap_used = "deny"
